dark mode solved

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,13 +8,13 @@
   --logoground: #002050;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
     --linkColor: #1f2937;
   }
-}
+} */
 
 body {
   color: var(--foreground);
